--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - export PATH=$PWD/:$PATH
       - apt-get update && apt-get -y install jq python3-pip python3-dev && pip3 install --upgrade awscli
       - apt-get install -y maven
-      - add-apt-repository -y ppa:webupd8team/java && apt-get update && apt-get install -y oracle-java8-installer
+      - add-apt-repository -y ppa:webupd8team/java && apt-get update && apt-get install -f && apt-get purge -y oracle-java8-installer && apt-get install -y oracle-java8-installer
   pre_build:
       commands:
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
